--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 	},
 	"dependencies": {
 		"antd-mobile": "^1.6.0",
+		"browser-sync": "^2.18.13",
+		"lodash": "^4.17.4",
 		"react": "~15.4.1",
 		"react-native": "0.42.0"
 	},
