--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 		"browser-sync": "^2.18.13",
 		"lodash": "^4.17.4",
 		"react": "~15.4.1",
-		"react-native": "0.42.0"
+		"react-native": "0.42.0",
+		"react-native-svg-uri": "^1.2.0",
+		"react-navigation": "^1.0.0-beta.11"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
