--- a/ios/myapp/Info.plist
+++ b/ios/myapp/Info.plist
@@ -57,5 +57,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>照相机</string>
 </dict>
 </plist>
