--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"ac-qrcode": "^1.0.1",
 		"antd-mobile": "^1.6.0",
 		"browser-sync": "^2.18.13",
 		"lodash": "^4.17.4",
 		"react": "~15.4.1",
 		"react-native": "0.42.0",
+		"react-native-camera": "^0.10.0",
 		"react-native-svg-uri": "^1.2.0",
 		"react-navigation": "^1.0.0-beta.11"
 	},
