--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react": "~15.4.1",
 		"react-native": "0.42.0",
 		"react-native-camera": "^0.10.0",
+//		"react-native-code-push": "^5.0.0-beta",
 		"react-native-svg-uri": "^1.2.0",
 		"react-navigation": "^1.0.0-beta.11"
 	},
