--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -127,6 +127,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-picker')
+    compile project(':react-native-datetime')
 //    compile project(':react-native-code-push')
     compile project(':react-native-camera')
     compile fileTree(dir: "libs", include: ["*.jar"])
