--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-picker": "^4.0.19",
     "react-native-spinkit": "^1.1.1",
     "react-native-svg-uri": "^1.2.0",
-    "react-navigation": "^1.0.0-beta.12"
+    "react-navigation": "^1.0.0-beta.12",
+    "rn-viewpager": "^1.2.3"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
