--- a/package.json
+++ b/package.json
@@ -1,38 +1,31 @@
 {
-  "name": "myapp",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
-  },
-  "dependencies": {
-    "ac-qrcode": "^1.0.1",
-    "antd-mobile": "^1.6.2",
-    "browser-sync": "^2.18.13",
-    "lodash": "^4.17.4",
-    "react": "~15.4.1",
-    "react-native": "0.42.0",
-    "react-native-camera": "^0.10.0",
-    "react-native-code-push": "^5.0.0-beta",
-    "react-native-custom-action-sheet": "^0.0.11",
-    "react-native-datetime": "^0.1.2",
-    "react-native-picker": "^4.0.19",
-    "react-native-spinkit": "^1.1.1",
-    "react-native-svg-uri": "^1.2.0",
-    "react-navigation": "^1.0.0-beta.12",
-    "rn-viewpager": "^1.2.3"
-  },
-  "devDependencies": {
-    "babel-jest": "20.0.3",
-    "babel-plugin-import": "^1.3.1",
-    "babel-preset-react-native": "2.1.0",
-    "eslint": "^4.4.1",
-    "eslint-plugin-react": "^7.2.0",
-    "jest": "20.0.4",
-    "react-test-renderer": "~15.4.1"
-  },
-  "jest": {
-    "preset": "react-native"
-  }
+	"name": "myapp",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"start": "node node_modules/react-native/local-cli/cli.js start",
+		"test": "jest"
+	},
+	"dependencies": {
+		"ac-qrcode": "^1.0.1",
+		"antd-mobile": "^1.6.0",
+		"browser-sync": "^2.18.13",
+		"react": "~15.4.1",
+		"react-native": "0.42.0",
+		"react-native-camera": "^0.10.0",
+		"react-native-svg-uri": "^1.2.0",
+		"react-navigation": "^1.0.0-beta.11"
+	},
+	"devDependencies": {
+		"babel-jest": "20.0.3",
+		"babel-plugin-import": "^1.3.1",
+		"babel-preset-react-native": "2.1.0",
+		"eslint": "^4.4.1",
+		"eslint-plugin-react": "^7.1.0",
+		"jest": "20.0.4",
+		"react-test-renderer": "~15.4.1"
+	},
+	"jest": {
+		"preset": "react-native"
+	}
 }
