--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: "com.android.application"
+//apply from: "../../node_modules/react-native/react.gradle"
+//apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 import com.android.build.OutputFile
 
@@ -130,6 +132,7 @@ dependencies {
     compile project(':react-native-spinkit')
     compile project(':react-native-picker')
     compile project(':react-native-datetime')
+
 //    compile project(':react-native-code-push')
     compile project(':react-native-camera')
     compile fileTree(dir: "libs", include: ["*.jar"])
