--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"ac-qrcode": "^1.0.1",
 		"antd-mobile": "^1.6.0",
 		"browser-sync": "^2.18.13",
-		"react": "~15.4.1",
-		"react-native": "0.42.0",
+		"react": "16.0.0-alpha.12",
+		"react-native": "^0.47.1",
 		"react-native-camera": "^0.10.0",
 		"react-native-spinkit": "^1.1.1",
 		"react-native-svg-uri": "^1.2.0",
