--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"react-native": "^0.47.1",
 		"react-native-camera": "^0.10.0",
 		"react-native-code-push": "^5.0.0-beta",
-		"react-native-spinkit": "^1.1.1",
+		"react-native-dismiss-keyboard": "^1.0.0",
 		"react-native-svg-uri": "^1.2.0",
 		"react-navigation": "^1.0.0-beta.11",
 		"rn-viewpager": "^1.2.3"
@@ -24,7 +24,8 @@
 		"babel-plugin-import": "^1.3.1",
 		"babel-preset-react-native": "2.1.0",
 		"eslint": "^4.4.1",
-		"eslint-plugin-react": "^7.2.0",
+		"eslint-plugin-react": "^7.2.1",
+		"invariant": "^2.2.2",
 		"jest": "20.0.4",
 		"react-test-renderer": "~15.4.1"
 	},
