--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,7 +129,7 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-spinkit')
+  //  compile project(':react-native-spinkit')
 //    compile project(':react-native-code-push')
     compile project(':react-native-camera')
     compile fileTree(dir: "libs", include: ["*.jar"])
