--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"ac-qrcode": "^1.0.1",
 		"antd-mobile": "^1.6.0",
 		"browser-sync": "^2.18.13",
+		"rc-form": "^1.4.6",
 		"react": "16.0.0-alpha.12",
 		"react-native": "^0.47.1",
 		"react-native-camera": "^0.10.0",
