--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-native-camera": "^0.10.0",
 		"react-native-code-push": "^5.0.0-beta",
 		"react-native-dismiss-keyboard": "^1.0.0",
+		"react-native-splash-screen": "^3.0.0",
 		"react-native-svg-uri": "^1.2.0",
 		"react-navigation": "^1.0.0-beta.11",
 		"rn-viewpager": "^1.2.4"
