--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"rc-form": "^1.4.6",
 		"react": "16.0.0-alpha.12",
 		"react-native": "^0.47.1",
+		"react-native-amap-location": "^0.0.4",
 		"react-native-camera": "^0.10.0",
 		"react-native-code-push": "^5.0.0-beta",
 		"react-native-dismiss-keyboard": "^1.0.0",
