--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-amap3d')
     compile project(':react-native-splash-screen')
   //  compile project(':react-native-spinkit')
     compile project(':react-native-code-push')
@@ -144,7 +145,6 @@ dependencies {
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:25.0.0"
     compile "com.facebook.react:react-native:+"  // From node_modules
-    compile project(path: ':reactamaplocation')
 }
 
 // Run this once to be able to run the application with BUCK
