--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity"/>
 
         <!--高德SDK-->
-        <service android:name="com.amap.api.location.APSService"/>
+        <!--<service android:name="com.amap.api.location.APSService"/>-->
         <meta-data
             android:name="com.amap.api.v2.apikey"
             android:value="Your api key here"/>
