--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"react-native-dismiss-keyboard": "^1.0.0",
 		"react-native-splash-screen": "^3.0.0",
 		"react-native-svg-uri": "^1.2.0",
+		"react-native-wkwebview-reborn": "^1.7.0",
 		"react-navigation": "^1.0.0-beta.11",
 		"rn-viewpager": "^1.2.4"
 	},
