--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-native-camera": "^0.10.0",
 		"react-native-code-push": "^5.0.0-beta",
 		"react-native-dismiss-keyboard": "^1.0.0",
+		"react-native-search-box": "^0.0.11",
 		"react-native-splash-screen": "^3.0.0",
 		"react-native-svg-uri": "^1.2.0",
 		"react-native-wkwebview-reborn": "^1.7.0",
