--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,12 +139,14 @@ android {
 dependencies {
     compile project(':react-native-amap3d')
     compile project(':react-native-splash-screen')
-  //  compile project(':react-native-spinkit')
+    //  compile project(':react-native-spinkit')
     compile project(':react-native-code-push')
     compile project(':react-native-camera')
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:25.0.0"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.android.support:appcompat-v7:25.0.0'
+    compile 'com.facebook.react:react-native:+'
+    // From node_modules
+    compile files('libs/tbs_sdk_thirdapp_v3.1.0.1034_43100_sharewithdownload_obfs_20170301_182143.jar')
 }
 
 // Run this once to be able to run the application with BUCK
