--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -16,3 +16,7 @@
 systemProp.http.proxyHost=203.208.39.247
 android.useDeprecatedNdk=true
 systemProp.http.proxyPort=80
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=hongchuang
+MYAPP_RELEASE_KEY_PASSWORD=hongchuang
