--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-fs')
     compile project(':react-native-spinkit')
     compile project(':react-native-amap3d')
     compile project(':react-native-splash-screen')
