--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"react-native-spinkit": "^1.1.1",
 		"react-native-splash-screen": "^3.0.0",
 		"react-native-svg-uri": "^1.2.0",
+		"react-native-video": "^2.0.0",
 		"react-native-wkwebview-reborn": "^1.7.0",
 		"react-navigation": "^1.0.0-beta.11",
 		"react-redux": "^5.0.6",
